2007-12-18  Andreas Kirschbaum

	* Fix display issues with uncached multi-tile images.

	* Fix deadlock when using --server option.

	* Do not fail if ~/.crossfire does not exist.

	* Add --debug-protocol option to log protocol messages.

2007-12-17  Andreas Kirschbaum

	* Fix race condition when connecting to the server fails.

	* Cache metaserver information; use it if the metaserver is not
	available or if a server disappears from the metaserver.

	* Do not query metaserver too often.

2007-12-16  Andreas Kirschbaum

	* Add support for sound2 protocol command. Add sounds for player
	death and magic bullet.

	* Add sound support for more than one concurrent sound effect, and
	for per-map background music.

2007-12-15  Andreas Kirschbaum

	* Add setup option to disable sound. (ragnorok)

	* Add sound support. Use it for poison warning.

	* Do not query metaserver with --server. Re-query metaserver after
	each connection attempt.

	* Do not crash when metaserver is not available.

2007-12-14  Andreas Kirschbaum

	* Do not crash if the server connection breaks. Change ESC
	behavior: disconnect from server if connected or exit application
	if not connected.

	* Make the window close button in non-full screen mode work.

2007-12-12  Andreas Kirschbaum

	* Support command lists ("cmd1;cmd2;cmd3").

	* Make text input fields scroll when the cursor would move out of
	the visible area.

2007-12-11  Andreas Kirschbaum

	* Add optional parameters to 'commandlist' skin command. Use them
	to shorten skin definitions.

	* Make sure the login dialog never looses focus.

	* Implement 'set_modal' skin command: it marks a dialog as
	"modal". Use this to prevent query, quit, and keybinding dialogs
	from losing the focus.

2007-12-11  Andreas Kirschbaum

	* Implement autorepeat buttons. Use these for message window and
	item lists.

2007-12-10  Andreas Kirschbaum

	* Add splash screen.

	* Implement "poisoned" warning: displays a symbol above the player
	while being poisoned.
